# TIMGE

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CODE_OF_CONDUCT.md  GUIDELINES.md  LICENSE  SECURITY.md  build.sh  comp.sh  imgui.ini  loc.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: codeql.yml
Sandbox/: CMakeLists.txt  compile_commands.json  imgui.ini
Sandbox/include/: Callbacks.hpp  Game.hpp  TIMGE~HEAD
Sandbox/include/TIMGE/: Application.hpp  Buffer.hpp  Callback.hpp  CallbackDefs.hpp  Exception.hpp  Keyboard.hpp  Monitor.hpp  Mouse.hpp  Shader.hpp  TIMGE.hpp  Vertex.hpp  Window.hpp
Sandbox/include/TIMGE/Utils/: Vector.hpp
Sandbox/include/glad/: glad.h
Sandbox/resources/shaders/: Default-FS.glsl  Default-VS.glsl
Sandbox/src/: Callbacks.cpp  Game.cpp  main.cpp  main.cpp.old
TIMGE/: CMakeLists.txt  CMakeLists.txt.bak  README.md  compile_commands.json
TIMGE/.cache/clangd/index/: Application.cpp.FE74E7B36895B8AF.idx  Application.hpp.0D30E72B0D240E8D.idx  ApplicationBase.cpp.69B950F3C3F4A430.idx  ApplicationBase.hpp.08D9E61D29C1BDE5.idx  Window.cpp.14BD511BBEFD2672.idx  Window.hpp.90A2581C3AB014EB.idx  context.c.43F4E08F5A382934.idx  egl_context.c.99A0A5118CF8EB1F.idx  glad.c.94A7841305F63C3B.idx  glad.h.3EDCBEBA80D01E49.idx  glfw3.h.F07F72E405998CB1.idx  glfw3native.h.CC7ADB7A44D47BB3.idx  glx_context.c.4755D4E4FAA07BF8.idx  init.c.62F6F37F10A52E54.idx  input.c.F2BAB6EDDCEC4DBC.idx  internal.h.AFB98A0F29BB679E.idx  khrplatform.h.E9A2B36401EE8C8F.idx  linux_joystick.c.91E18590F53E8F9F.idx  linux_joystick.h.D3B749AA2CBA2942.idx  mappings.h.8452BF50F007FDCC.idx  monitor.c.A19694C73A5F4BF9.idx  null_init.c.4489D43C34DC31CA.idx  null_joystick.c.965211C250E20070.idx  null_joystick.h.B3D346474B951422.idx  null_monitor.c.735A8AFF291B76C3.idx  null_platform.h.2F65BC077E58AE7A.idx  null_window.c.1163EFC67A7FE4E9.idx  osmesa_context.c.CAE7D5A379769031.idx  platform.c.0AE4970277DF7C54.idx  platform.h.53A6F548DB140D66.idx  posix_module.c.B3E1F2EF012830FD.idx  posix_poll.c.C77CB74DA1731D3B.idx  posix_poll.h.98E58B453F1B6685.idx  posix_thread.c.E21A0BDC24479F27.idx  posix_thread.h.C94D36ACD5A243EB.idx  posix_time.c.37E87F6DB6493F85.idx  posix_time.h.FAD93DF71D80B0B3.idx  vulkan.c.28B5525AA065A38D.idx  window.c.BF55D5429BEFB56C.idx  wl_init.c.C4E1D85F930380E3.idx  (+9 more)
TIMGE/include/TIMGE/: Application.hpp  ApplicationBase.hpp  Buffer.hpp  CallbackDefs.hpp  Exception.hpp  Keyboard.hpp  Monitor.hpp  Mouse.hpp  Shader.hpp  TIMGE.hpp  TIMGEApplicaion.hpp  TIMGEWindow.hpp  Vertex.hpp  Window.hpp
TIMGE/include/TIMGE/Utils/: Vector.hpp
TIMGE/src/: Application.cpp  ApplicationBase.cpp  Buffer.cpp  Callback.cpp  CallbackDefs.cpp  Exception.cpp  Keyboard.cpp  Monitor.cpp  Mouse.cpp  Shader.cpp  TIMGEWindow.cpp  Vertex.cpp  Window.cpp
TIMGE/src/Utils/: Vector.cpp
include/TIMGE/: TIMGE.hpp
